--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@ which module to associate the app with. In app.js we create the "dinnerPlanner" 
     <script src="js/services/goodJobService.js"></script>
     <script src="js/controllers/loginCtrl.js"></script>
     <script src="js/controllers/applicationCtrl.js"></script>
+    <script src="js/controllers/mainCtrl.js"></script>
     
   </head>
   <body>
