--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- Notice the ng-app Angular directive. This tells Angular where the application starts and also
 which module to associate the app with. In app.js we create the "dinnerPlanner" module. -->
-<html lang="en" ng-app="GoodJob">
+<html lang="en" ng-app="goodJob">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +11,7 @@ which module to associate the app with. In app.js we create the "dinnerPlanner" 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <!-- Own stylesheet-->
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="app.css">
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.min.css">
     <!-- jQuery -->
@@ -27,11 +27,23 @@ which module to associate the app with. In app.js we create the "dinnerPlanner" 
     <script src="bower_components/angularfire/dist/angularfire.min.js"></script>
     
     <!-- The application JavaScript code -->
-    <script src="js/app.js"></script>
+    <script src="app.js"></script>
+    <script src="config.js"></script>
+
+    <script src="components/auth/auth.js"></script>
+    <script src="components/security/security.js"></script>
+    <script src="components/profile/profile.js"></script>
+    <script src="components/applicationAPI/applicationAPI.js"></script>
+    <script src="components/firebase.utils/firebase.utils.js"></script>
+
+
+    <script src="login/login.js"></script>
+    <script src="list-of-adds/list-of-adds.js"></script>
+    <!-- 
     <script src="js/services/goodJobService.js"></script>
     <script src="js/controllers/loginCtrl.js"></script>
     <script src="js/controllers/mainCtrl.js"></script>
-    
+     -->
   </head>
   <body>
   <header>
