Added profileCtrl file and in the index.html, as well as switched from mainctrl to profilectrl in app.js

--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,7 @@ which module to associate the app with. In app.js we create the "dinnerPlanner" 
     <script src="js/controllers/applicationCtrl.js"></script>
     <script src="js/controllers/mainCtrl.js"></script>
     <script src="js/controllers/availableJobsCtrl.js"></script>
+    <script src="js/controllers/profileCtrl.js"></script>
     
   </head>
   <body>
