--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,9 @@ which module to associate the app with. In app.js we create the "dinnerPlanner" 
     <script src="js/controllers/mainCtrl.js"></script>
     <script src="js/controllers/availableJobsCtrl.js"></script>
     <script src="js/controllers/profileCtrl.js"></script>
+
+    <!-- Chart.js -->
+    <script src="charts/Chart.js"></script>
     
   </head>
   <body>
