--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,7 @@ which module to associate the app with. In app.js we create the "dinnerPlanner" 
     <script src="login/login.js"></script>
     <script src="list-of-adds/list-of-adds.js"></script>
     <script src="profile/profile.js"></script>
+    <script src="home/home.js"></script>
     
     <!-- Chart.js -->
     <script src="charts/Chart.js"></script>
@@ -51,7 +52,7 @@ which module to associate the app with. In app.js we create the "dinnerPlanner" 
   </head>
   <body>
   <h1>GoodJob</h1>
-    <div ng-view></div>
+    <ng-view></ng-view>
     
 
   </body>
