Added chart.js and the plugin angular-chart.js to be able to show values and competences for the user in the user profile. Also added these two to the index.html and app.js files.

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,11 @@ which module to associate the app with. In app.js we create the "dinnerPlanner" 
     <script src="bower_components/firebase/firebase.js"></script>
     <script src="bower_components/angularfire/dist/angularfire.min.js"></script>
 
+    <!-- Chart.js -->
+    <script src="charts/chart.js"></script>
+    <script src="charts/angular-chart.js"></script>
+    <!-- http://jtblin.github.io/angular-chart.js/ -->
+
     <!-- The application JavaScript code -->
     <script src="js/app.js"></script>
     <script src="js/services/goodJobService.js"></script>
@@ -40,9 +45,6 @@ which module to associate the app with. In app.js we create the "dinnerPlanner" 
     <script src="js/controllers/availableJobsCtrl.js"></script>
     <script src="js/controllers/profileCtrl.js"></script>
 
-    <!-- Chart.js -->
-    <script src="charts/Chart.js"></script>
-    
   </head>
   <body>
 
