--- a/app/profile/profile.html
+++ b/app/profile/profile.html
@@ -6,6 +6,7 @@
 		</h2>
 	</div>
 
+	<!-- User Information -->
 	<div class="panel panel-default">
 		<div class="panel-heading">
 				<h2 class="panel-title">
@@ -36,6 +37,33 @@
 		</div>
 	</div>
 
+	<!-- User values -->
+	<div class="panel panel-default">
+		<div class="panel-heading">
+				<h2 class="panel-title">
+					User values
+				</h2>
+			</div>
+		<div class="panel-body">
+
+			<canvas id="bar" class="chart chart-bar" 
+					data="values_data"
+  					labels="values_lables"
+  					series="values_series">
+  			</canvas> 
+
+			<div class="row">
+				<div class="text-center">
+					<button class="btn" ng-click="updateUserCompetence()">
+						Update values
+					</button>
+				</div>
+			</div>
+
+		</div>
+	</div>
+
+	<!-- User competences -->
 	<div class="panel panel-default">
 		<div class="panel-heading">
 				<h2 class="panel-title">
@@ -43,19 +71,14 @@
 				</h2>
 			</div>
 		<div class="panel-body">
-			<div class="row">
-				<div class="col-xs-4 col-sm-4">
-					<img class="profile-img" src="http://fc00.deviantart.net/fs71/f/2012/137/9/7/lilo_by_memechii-d505p0t.png" ></img>
-				</div>
-				<div class="col-xs-8 col-sm-8 text-left">
-					<div ng-repeat="competence in userCompetence" >
-						<div class="row">
-							<div class="col-sm-4 text-left"> {{ competence.competence_header }}</div>
-							<div class="col-sm-8 text-left"><b> {{ competence.competence_value }} </b></div>
-						</div>
-					</div>
-				</div>
-			</div>
+
+			<canvas id="base" class="chart-base" 
+					chart-type="competence_chart" 
+					data="competence_data" 
+					labels="competence_lables" 
+					legend="false">
+			</canvas> 
+
 			<div class="row">
 				<div class="text-center">
 					<button class="btn" ng-click="updateUserCompetence()">
@@ -63,7 +86,11 @@
 					</button>
 				</div>
 			</div>
+
 		</div>
 	</div>
 
+	
+
 </div>
+
