Mobile Angular UI 1.2
All Views should now be updated
* Register form added
* CSS needs some improvements

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,6 +1,8 @@
-<!-- =========================== -->
-<!--            HEADER           -->
-<!-- =========================== --> 
+
+
+<div class="scrollable">
+ <div class="scrollable-content ">
+
 <div class="container-home">
 
       <div id="descr">
@@ -16,4 +18,4 @@
         </p>
       </div>
    
-    </div>
+    </div></div></div>
