--- a/app/profile/profile.html
+++ b/app/profile/profile.html
@@ -1,3 +1,7 @@
+
+<div class="scrollable">
+ <div class="scrollable-content section">
+
 <div class="container">
 
 	<div>
@@ -93,4 +97,4 @@
 	
 
 </div>
-
+</div></div>
