--- a/app/list-of-adds/list-of-adds.html
+++ b/app/list-of-adds/list-of-adds.html
@@ -1,4 +1,6 @@
-<div class="container">
+<div class="scrollable">  
+  <div class="scrollable-content">
+  <div class="container">
 
 	<div>
 		<h2 class="text-center">
@@ -54,3 +56,5 @@
 	</div>
 </div>
 
+  </div>
+</div>
