--- a/app/applications/applications.html
+++ b/app/applications/applications.html
@@ -18,8 +18,8 @@
 						</h2>
 					</div>
 					<div class="panel-body">
-					    <div class="row">
-					    	<div class="col-xs-6 col-sm-8 text-left">
+						<div class="row">
+							<div class="col-xs-6 col-sm-8 text-left">
 								<div class="row">
 									<div class="col-sm-4 text-left"> Job title: </div>
 									<div class="col-sm-8 text-left"><b> {{ ad.job_title }} </b></div>
@@ -44,14 +44,17 @@
 									<div class="col-sm-4 text-left"> Deadline to apply: </div>
 									<div class="col-sm-8 text-left"><b> {{ ad.job_deadline }} </b></div>
 								</div>
-		 					</div>
+							</div>
 							<div class="col-xs-6 col-sm-4 ">
 								<img class="img" src="{{ ad.company_logo }}" ></img>
 							</div>
-				    	</div>
-				    	<div class="row">
+						</div>
+						<div class="row">
+							<div class="text-center"> Job status: <b>{{ ad.job_status }}</b></div>
+						</div>
+						<div class="row">
 							<div class="text-center">
-								<button class="btn" ng-click="addNewApplication()">Apply here</button>
+								<button class="btn" ng-click="continue('Pending')">Continue</button>
 							</div>
 						</div>
 					</div>
