Added code for login and registration, not yet tested. TODO: Test and Input validation.

--- a/app/register/register.html
+++ b/app/register/register.html
@@ -34,7 +34,7 @@
         <div class="form-group has-success has-feedback">
           <label>First Name</label>
           <input type="email"
-                 ng-model="email"
+                 ng-model="fName"
                  class="form-control"
                  placeholder="First Name">
         </div>
@@ -43,7 +43,7 @@
         <div class="form-group has-success has-feedback">
           <label>Last Name</label>
           <input type="email"
-                 ng-model="email"
+                 ng-model="lName"
                  class="form-control"
                  placeholder="Last Name">
         </div>
@@ -60,6 +60,7 @@
           <label>Password</label>
           <input type="password" 
                  class="form-control"
+				 ng-model="password1"
                  placeholder="Password">
         </div>
 
@@ -67,6 +68,7 @@
           <label>Repeat Password</label>
           <input type="password" 
                  class="form-control"
+				 ng-model="password2"
                  placeholder="Repeat Password">
         </div>
 
