--- a/app/login/login.html
+++ b/app/login/login.html
@@ -5,20 +5,23 @@
 <div class="scrollable">
  <div class="scrollable-content section">
    
-  <form role="form" ng-submit='createUser()'>
+  <form name="loginForm" role="form">
     <fieldset>
         <div class="form-group has-success has-feedback">
           <label>Email</label>
           <input type="email"
-                 ng-model="email"
+				 name="email"
+                 ng-model="user.email"
                  class="form-control"
                  placeholder="Enter email">
         </div>
 
         <div class="form-group">
           <label>Password</label>
-          <input type="password" 
+          <input type="password"
+			     name="password"
                  class="form-control"
+				 ng-model="user.password"
                  placeholder="Password">
         </div>
 
@@ -32,12 +35,12 @@
 
 <span class="help-block">{{help_message}}</span>
 
-    <button class="btn btn-primary btn-block">
+    <button class="btn btn-primary btn-block" ng-click='login($event)'>
       Login
     </button>
 
     <div ui-content-for="navbarAction">
-      <a class='btn' ng-click='createUser()'>Login</a>
+      <a class='btn' ng-click='login($event)'>Login</a>
     </div>
 
   </form>
