--- a/app/profile/profile.html
+++ b/app/profile/profile.html
@@ -93,8 +93,8 @@
 
 		</div>
 	</div>
-
-	
-
+	<div ui-content-for="navbarAction">
+      <a class='btn' ng-click='logout()'>Logout</a>
+    </div>
 </div>
 </div></div>
