--- a/app/login/login.html
+++ b/app/login/login.html
@@ -5,7 +5,7 @@
 <div class="scrollable">
  <div class="scrollable-content section">
    
-  <form role="form" ng-submit='createUser()'>
+  <form role="form" ng-submit='login()'>
     <fieldset>
         <div class="form-group has-success has-feedback">
           <label>Email</label>
@@ -17,7 +17,8 @@
 
         <div class="form-group">
           <label>Password</label>
-          <input type="password" 
+          <input type="password"
+                 ng-model="pass" 
                  class="form-control"
                  placeholder="Password">
         </div>
@@ -37,7 +38,7 @@
     </button>
 
     <div ui-content-for="navbarAction">
-      <a class='btn' ng-click='createUser()'>Login</a>
+      <a class='btn' ng-click='login()'>Login</a>
     </div>
 
   </form>
