Initial work of register page and profile

--- a/app/index.html
+++ b/app/index.html
@@ -86,7 +86,7 @@ which module to associate the app with. In app.js we create the "dinnerPlanner" 
         <div class="btn-group justified">
           <a href="#/home" class="btn btn-navbar"><i class="fa fa-home fa-navbar"></i> Job List </a>
           <a href="#/applications" class="btn btn-navbar"><i class="fa fa-book fa-navbar"></i> Applications</a>
-          <a href="#/home" class="btn btn-navbar"><i class="fa fa-star-o fa-navbar"></i> Profile</a>
+          <a href="#/profile" class="btn btn-navbar"><i class="fa fa-star-o fa-navbar"></i> Profile</a>
         </div>
       </div>
 
