Added secured routes
Added secured routes for job-list and applications. What's still need to be done is how to switch between logged in/logged out.

--- a/app/applications/applications.html
+++ b/app/applications/applications.html
@@ -61,6 +61,10 @@
 				</div>
 			</div>
 
+			
+			<div ui-content-for="navbarAction">
+		      <a class='btn' ng-click='logout()'>Logout</a>
+		    </div>
 		</div>
 
 	</div>
