--- a/app/values/values.html
+++ b/app/values/values.html
@@ -1,9 +1,4 @@
-<div ui-content-for="title">
-  <span>Values test</span>
-</div>
-
-<div class="scrollable">
-  <div class="scrollable-content">
+<div class="container">
     <div class='section'>
       <ui-state id='activeTab' default='1'></ui-state>
 
@@ -180,6 +175,4 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</div>
+    </div></div>
