--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,7 +1,6 @@
 
 
-<div class="scrollable">
- <div class="scrollable-content ">
+
 
 <div class="container-home">
 
@@ -18,4 +17,4 @@
         </p>
       </div>
    
-    </div></div></div>
+    </div>
