--- a/app/login/login.html
+++ b/app/login/login.html
@@ -1,9 +1,4 @@
-<div ui-content-for="title">
-  <span>Login</span>
-</div>
-
-<div class="scrollable">
- <div class="scrollable-content section">
+<div class="container">
    
   <form role="form" ng-submit='createUser()'>
     <fieldset>
@@ -22,27 +17,28 @@
                  placeholder="Password">
         </div>
 
-        <div class="form-group">
-          <label>Remember Me</label>
-          <ui-switch 
-            ng-model='rememberMe'></ui-switch>
-        </div>
+  <div class="input-group">
+     <div class="checkbox">
+        <label>
+          <input id="login-remember" type="checkbox" name="remember" value="1"> Remember me
+            </label>
+      </div>
+</div>
+
+
     </fieldset>
     <hr>
 
 <span class="help-block">{{help_message}}</span>
 
-    <button class="btn btn-primary btn-block">
-      Login
-    </button>
+     <a ng-click='createUser()'>
+      <button class="btn btn-primary btn-block">Login</button>
+    </a>
+<hr>
 
-    <div ui-content-for="navbarAction">
-      <a class='btn' ng-click='createUser()'>Login</a>
-    </div>
 
   </form>
- </div>
-</div>
+  </div>
 
 
 
