--- a/app/register/register.html
+++ b/app/register/register.html
@@ -1,9 +1,5 @@
-<div ui-content-for="title">
+<div class="container">
 
-</div>
-
-<div class="scrollable">
- <div class="scrollable-content section">
    
   <form name="registerForm" role="form" ng-submit='createUser()'>
     <fieldset>
@@ -70,11 +66,14 @@
                  placeholder="Repeat Password">
         </div>
 
-        <div class="form-group">
-          <label>Remember Me</label>
-          <ui-switch 
-            ng-model='rememberMe'></ui-switch>
-        </div>
+       
+  <div class="input-group">
+     <div class="checkbox">
+        <label>
+          <input id="login-remember" type="checkbox" name="remember" value="1"> Remember me
+            </label>
+      </div>
+</div>
     </fieldset>
     <hr>
 
@@ -85,17 +84,14 @@
 
 <span class="help-block">{{help_message}}</span>
 
-    <button class="btn btn-primary btn-block">
-      Register
-    </button>
+     <a ng-click='createUser()'>
+      <button class="btn btn-primary btn-block">Register</button>
+     </a>
 
-    <div ui-content-for="navbarAction">
-      <a class='btn' ng-click='createUser()'>Register</a>
-    </div>
+  <hr>
 
   </form>
  </div>
-</div>
 
 
 
