--- a/app/login/login.html
+++ b/app/login/login.html
@@ -32,16 +32,9 @@
 
     <span class="help-block">{{help_message}}</span>
 
-    <button class="btn btn-primary btn-block" ng-click='login($event)'>
+    <a ng-click='login($event)'><button class="btn btn-primary btn-block">
       Login
-    </button>
-
-<<<<<<< HEAD
-    <div ui-content-for="navbarAction">
-      <a class='btn' ng-click='login($event)'>Login</a>
-    </div>
-=======
->>>>>>> views_branch
+    </button></a>
 
   </form>
   </div>
