Register button diasabled if invalid form

--- a/app/register/register.html
+++ b/app/register/register.html
@@ -108,9 +108,8 @@
 
 <span class="help-block">{{help_message}}</span>
 
-      <a class='btn' 
-     ng-disabled="registerForm.$invalid" 
-     ng-click='createUser()'><button class="btn btn-primary btn-block">
+      <a
+     ng-click='createUser()'><button ng-disabled="registerForm.$invalid"  class="btn btn-primary btn-block">
       Register
     </button></a>
 
