--- a/app/profile/profile.html
+++ b/app/profile/profile.html
@@ -6,6 +6,9 @@
 			User profile
 		</h2>
 	</div>
+<div>
+      <a class='btn' ng-click='logout()'>Logout</a>
+    </div>
 
 	<!-- User Information -->
 	<div class="panel panel-default">
@@ -90,13 +93,6 @@
 
 		</div>
 	</div>
-<<<<<<< HEAD
-	<div ui-content-for="navbarAction">
-      <a class='btn' ng-click='logout()'>Logout</a>
-    </div>
-=======
 
-
->>>>>>> views_branch
 </div>
 
