--- a/app/index.html
+++ b/app/index.html
@@ -82,7 +82,7 @@ which module to associate the app with. In app.js we create the "dinnerPlanner" 
             <li><a href="#/apply">Apply</a></li>
           </ul>
         </li>
-        <li ng-show="$rootScope.isUserLoggedIn"><a href="#/values">Value Test</a></li>
+        <li ng-show="isUserLoggedIn"><a href="#/values">Value Test</a></li>
       </ul>
 
 
