nav fixes - Much easier to follow

--- a/app/apply/apply.html
+++ b/app/apply/apply.html
@@ -78,7 +78,7 @@
               </div>
               </br>
               <div>
-                <button class="btn" ng-click="sendApplication()">Apply now</button>
+                <button class="btn btn-default btn-primary" ng-click="sendApplication()">Apply now</button>
               </div>
             </div>
           </div>
