--- a/app/values/values.html
+++ b/app/values/values.html
@@ -43,10 +43,10 @@
         <p>Great! Now you get it! Ahead of you there are two pages with values which you are asked to choose between. Good luck!</p>
         <div class="row">
           <div class="text-center">
-            <a ui-set="{'activeTab': 1}" class="btn btn-info">
+            <a ui-set="{'activeTab': 1}" class="btn btn-default btn-primary">
               Go back
             </a>
-            <a ui-set="{'activeTab': 3}" class="btn btn-info">
+            <a ui-set="{'activeTab': 3}" class="btn btn-default btn-primary">
               Continue
             </a>
           </div>
@@ -86,10 +86,10 @@
         </div>
         <div class="row">
           <div class="text-center">
-            <a ui-set="{'activeTab': 2}" class="btn btn-info">
+            <a ui-set="{'activeTab': 2}" class="btn btn-default btn-primary">
               Go back
             </a>
-            <a ui-set="{'activeTab': 4}" class="btn btn-info">
+            <a ui-set="{'activeTab': 4}" class="btn btn-default btn-primary">
               Continue
             </a>
           </div>
@@ -129,10 +129,10 @@
         </div>
         <div class="row">
           <div class="text-center">
-            <a ui-set="{'activeTab': 3}" class="btn btn-info">
+            <a ui-set="{'activeTab': 3}" class="btn btn-default btn-primary">
               Go back
             </a>
-            <a ui-set="{'activeTab': 5}" class="btn btn-info">
+            <a ui-set="{'activeTab': 5}" class="btn btn-default btn-primary">
               Results
             </a>
           </div>
@@ -170,7 +170,7 @@
         </div>
         <div class="row">
           <div class="text-center">
-            <a href="#/profile" class="btn btn-info">
+            <a href="#/profile" class="btn btn-default btn-primary">
               Continue to profile
             </a>
           </div>
