--- a/app/applications/applications.html
+++ b/app/applications/applications.html
@@ -50,7 +50,7 @@
 						</div>
 						<div class="row">
 							<div class="text-center">
-								<button class="btn" ng-click="continue('Pending')">Continue</button>
+								<button class="btn btn-default btn-primary" ng-click="continue('Pending')">Continue</button>
 							</div>
 						</div>
 					</div>
