--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,6 +1,3 @@
-
-
-
 <div class="container-home">
 
       <div id="descr">
@@ -9,7 +6,7 @@
         <p class="description">
           You have the design, you have the code. We ve created the product that will help your startup to look even better.
         </p>
-        <p><a href="#list" class="dl-btn btn-fill btn-stretch">Get started</a></p>            
+        <p><a href="#list" class="dl-btn btn-fill btn-stretch">Search Job Applications</a></p>            
         <p class="dl-btn-group">
           <a href="#register" class="dl-btn btn-stroke btn-left-stretch"><i class="fa fa-user-plus"></i>Register</a>
           <a href="#login" class="dl-btn btn-stroke btn-right-stretch"><i class="fa fa-check-square-o"></i>Login</a>
