Navbar hide when clicked

--- a/app/profile/profile.html
+++ b/app/profile/profile.html
@@ -12,7 +12,7 @@
 
     <div class="alert alert-danger alert-error">
     <a href="#" class="close" data-dismiss="alert">&times;</a>
-    <strong>Hello!</strong> <a href="/#values">Please fill in the value test to get a recomened view of the applications (Click Here)</a>
+    <strong>Hello!</strong> <a href="/#values">Please fill in the value test to get a recommended view of the applications (Click Here)</a>
 </div>
 
 	<!-- User Information -->
