--- a/app/profile/profile.html
+++ b/app/profile/profile.html
@@ -3,7 +3,7 @@
 
 	<div>
 		<h2 class="text-center">
-			User profile    |  <a href="" ng-click='logout()'><button class="btn btn-lg btn-primary">Logout</button></a>
+			User profile    
 		</h2>
 	</div>
 <div>
