Better interaction for login and profile
Added better interaction for login page and profile, also added some improve navigation

--- a/app/profile/profile.html
+++ b/app/profile/profile.html
@@ -6,14 +6,11 @@
 			User profile    
 		</h2>
 	</div>
-<div>
-
-    </div>
 
     <div class="alert alert-danger alert-error">
-    <a href="#" class="close" data-dismiss="alert">&times;</a>
-    <strong>Hello!</strong> <a href="/#values">Please fill in the value test to get a recommended view of the applications (Click Here)</a>
-</div>
+    	<a href="javascript:void(0)" class="close" data-dismiss="alert">&times;</a>
+    	<strong>Hello!</strong> <a href="/#values">Please fill in the value test to get a recommended view of the applications (Click Here)</a>
+	</div>
 
 	<!-- User Information -->
 	<div class="panel panel-default">
@@ -63,7 +60,7 @@
 
 			<div class="row">
 				<div class="text-center">
-					<button class="btn btn-default btn-primary" ng-click="updateUserCompetence()">
+					<button class="btn btn-default btn-primary" ng-click="updateValues()">
 						Update values
 					</button>
 				</div>
