--- a/app/login/login.html
+++ b/app/login/login.html
@@ -1,11 +1,15 @@
 <div class="container">
    
   <form name="loginForm" role="form"> 
+     <div ng-show="!!help_message" class="alert alert-danger alert-error">
+      <a href="javascript:void(0)" class="close" data-dismiss="alert">&times;</a>
+      {{help_message}}
+    </div>
      <fieldset>
         <div class="form-group has-success has-feedback">
           <label>Email</label>
           <input type="email"
-				 name="email"
+         name="email"
                  ng-model="user.email"
                  class="form-control"
                  placeholder="Enter email">
@@ -14,27 +18,19 @@
         <div class="form-group">
           <label>Password</label>
           <input type="password"
-			           name="password"
+                 name="password"
                  class="form-control"
-				        ng-model="user.password"
+                 ng-model="user.password"
                  placeholder="Password">
         </div>
-
-  <div class="input-group">
-     <div class="checkbox">
-        <label>
-          <input id="login-remember" type="checkbox" name="remember" value="1"> Remember me
-            </label>
-      </div>
-</div>
     </fieldset>
     <hr>
-
-    <span class="help-block">{{help_message}}</span>
-
     <a ng-click='login($event)'><button class="btn btn-primary btn-block">
       Login
     </button></a>
+    <div class="text-center">
+    or <a href="#/register">Create new account</a>
+    </div>
 
   </form>
   </div>
