Better interaction for valuetest notification

--- a/app/profile/profile.html
+++ b/app/profile/profile.html
@@ -7,7 +7,7 @@
 		</h2>
 	</div>
 
-    <div class="alert alert-danger alert-error">
+    <div ng-hide="getValueTestStatus()" class="alert alert-danger alert-error">
     	<a href="javascript:void(0)" class="close" data-dismiss="alert">&times;</a>
     	<strong>Hello!</strong> <a href="/#values">Please fill in the value test to get a recommended view of the applications (Click Here)</a>
 	</div>
