--- a/app/values/values.html
+++ b/app/values/values.html
@@ -170,7 +170,7 @@
         </div>
         <div class="row">
           <div class="text-center">
-            <a href="#/profile" class="btn btn-default btn-primary">
+            <a ng-click="valueTestStatus(true)" href="#/profile" class="btn btn-default btn-primary">
               Continue to profile
             </a>
           </div>
