--- a/app/list-of-adds/list-of-adds.html
+++ b/app/list-of-adds/list-of-adds.html
@@ -70,7 +70,7 @@
 						</div>
 						<div class="row">
 							<div class="text-center">
-								<a href="/#apply"><button class=" btn btn-default btn-primary">Apply here</button></a>
+								<button class="btn btn-default btn-primary" ng-click="applyForJob(ad.job_id)">Apply for job</button>
 							</div>
 						</div>
 					</div>
