--- a/app/list-of-adds/list-of-adds.html
+++ b/app/list-of-adds/list-of-adds.html
@@ -41,11 +41,11 @@
 							<div class="col-xs-6 col-sm-8 text-left">
 								<div class="row">
 									<div class="col-sm-4 text-left"> Job title: </div>
-									<div class="col-sm-8 text-left"><b> {{ ad.job_title }} </b></div>
+									<div class="col-sm-8 text-left"><b> {{ ad.job_header }} </b></div>
 								</div>
 								<div class="row">
-									<div class="col-sm-4 text-left"> Job hours: </div>
-									<div class="col-sm-8 text-left"><b> {{ ad.job_hours }} </b></div>
+									<div class="col-sm-4 text-left"> Job title: </div>
+									<div class="col-sm-8 text-left"><b> {{ ad.job_title }} </b></div>
 								</div>
 								<div class="row">
 									<div class="col-sm-4 text-left"> Job city: </div>
@@ -53,15 +53,7 @@
 								</div>
 								<div class="row">
 									<div class="col-sm-4 text-left"> Job starts: </div>
-									<div class="col-sm-8 text-left"><b> {{ ad.job_starts }} </b></div>
-								</div>
-								<div class="row">
-									<div class="col-sm-4 text-left"> Job ends: </div>
-									<div class="col-sm-8 text-left"><b> {{ ad.job_ends }} </b></div>
-								</div>
-								<div class="row">
-									<div class="col-sm-4 text-left"> Deadline to apply: </div>
-									<div class="col-sm-8 text-left"><b> {{ ad.job_deadline }} </b></div>
+									<div class="col-sm-8 text-left"><b> {{ ad.job_posted }} </b></div>
 								</div>
 		 					</div>
 							<div class="col-xs-6 col-sm-4 ">
