Small user friendly fixes with the information in the list of adds

--- a/app/list-of-adds/list-of-adds.html
+++ b/app/list-of-adds/list-of-adds.html
@@ -44,7 +44,7 @@
 									<div class="col-sm-8 text-left"><b> {{ ad.job_header }} </b></div>
 								</div>
 								<div class="row">
-									<div class="col-sm-4 text-left"> Job title: </div>
+									<div class="col-sm-4 text-left"> Job position: </div>
 									<div class="col-sm-8 text-left"><b> {{ ad.job_title }} </b></div>
 								</div>
 								<div class="row">
@@ -52,7 +52,7 @@
 									<div class="col-sm-8 text-left"><b> {{ ad.job_city }} </b></div>
 								</div>
 								<div class="row">
-									<div class="col-sm-4 text-left"> Job starts: </div>
+									<div class="col-sm-4 text-left"> Job posted: </div>
 									<div class="col-sm-8 text-left"><b> {{ ad.job_posted }} </b></div>
 								</div>
 		 					</div>
