--- a/app/apply/apply.html
+++ b/app/apply/apply.html
@@ -24,37 +24,49 @@
           <div class="row">
             <div class="col-xs-6 col-sm-8 text-left">
               <div class="row">
-                <div class="col-sm-4 text-left"> Job title: </div>
-                <div class="col-sm-8 text-left"><b> {{ ad.job_title }} </b></div>
-              </div>
-              <div class="row">
-                <div class="col-sm-4 text-left"> Job description: </div>
-                <div class="col-sm-8 text-left"><b> {{ ad.job_description }} </b></div>
-              </div>
-              <div class="row">
-                <div class="col-sm-4 text-left"> Job hours: </div>
-                <div class="col-sm-8 text-left"><b> {{ ad.job_hours }} </b></div>
-              </div>
-              <div class="row">
-                <div class="col-sm-4 text-left"> Job city: </div>
-                <div class="col-sm-8 text-left"><b> {{ ad.job_city }} </b></div>
-              </div>
-              <div class="row">
-                <div class="col-sm-4 text-left"> Job address: </div>
-                <div class="col-sm-8 text-left"><b> {{ ad.job_address }} </b></div>
-              </div>
-              <div class="row">
-                <div class="col-sm-4 text-left"> Job starts: </div>
-                <div class="col-sm-8 text-left"><b> {{ ad.job_starts }} </b></div>
-              </div>
-              <div class="row">
-                <div class="col-sm-4 text-left"> Job ends: </div>
-                <div class="col-sm-8 text-left"><b> {{ ad.job_ends }} </b></div>
-              </div>
-              <div class="row">
-                <div class="col-sm-4 text-left"> Deadline to apply: </div>
-                <div class="col-sm-8 text-left"><b> {{ ad.job_deadline }} </b></div>
-              </div>
+                  <div class="col-sm-4 text-left"> Job title: </div>
+                  <div class="col-sm-8 text-left"><b> {{ ad.job_header }} </b></div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-4 text-left"> Job position: </div>
+                  <div class="col-sm-8 text-left"><b> {{ ad.job_title }} </b></div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-4 text-left"> Job city: </div>
+                  <div class="col-sm-8 text-left"><b> {{ ad.job_city }} </b></div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-4 text-left"> Job address: </div>
+                  <div class="col-sm-8 text-left"><b> {{ ad.job_address }} </b></div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-4 text-left"> Job positions available: </div>
+                  <div class="col-sm-8 text-left"><b> {{ ad.job_positions }} </b></div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-4 text-left"> Job conditions: </div>
+                  <div class="col-sm-8 text-left"><b> {{ ad.job_conditions }} </b></div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-4 text-left"> Job hours: </div>
+                  <div class="col-sm-8 text-left"><b> {{ ad.job_hours }} </b></div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-4 text-left"> Link to add: </div>
+                  <div class="col-sm-8 text-left"><b> {{ ad.job_link }} </b></div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-4 text-left"> Job posted: </div>
+                  <div class="col-sm-8 text-left"><b> {{ ad.job_posted }} </b></div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-4 text-left"> Deadline for application: </div>
+                  <div class="col-sm-8 text-left"><b> {{ ad.job_deadline }} </b></div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-4 text-left"></br>Job description: </div>
+                  <div class="col-sm-8 text-left"><b> {{ ad.job_description }}</b></div>
+                </div>
             </div>
             <div class="col-xs-6 col-sm-4 ">
               <img class="img" src="{{ ad.company_logo }}" ></img>
