--- a/app/apply/apply.html
+++ b/app/apply/apply.html
@@ -13,16 +13,16 @@
       </div>
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h2 class="panel-title company_name">
+          <h2 class="panel-title company_name"><b>
             {{ ad.company_name }} <!-- - {{ ad.company_match }} match -->
-          </h2>
+          </b></h2>
         </div>
         <div class="panel-body">
           <h3 class="text-center">
             Job information
           </h3>
           <div class="row">
-            <div class="col-xs-6 col-sm-8 text-left">
+            <div class="col-xs-8 col-sm-8 text-left">
               <div class="row">
                   <div class="col-sm-4 text-left"> Job title: </div>
                   <div class="col-sm-8 text-left"><b> {{ ad.job_header }} </b></div>
@@ -40,7 +40,7 @@
                   <div class="col-sm-8 text-left"><b> {{ ad.job_address }} </b></div>
                 </div>
                 <div class="row">
-                  <div class="col-sm-4 text-left"> Job positions available: </div>
+                  <div class="col-sm-4 text-left"> Positions: </div>
                   <div class="col-sm-8 text-left"><b> {{ ad.job_positions }} </b></div>
                 </div>
                 <div class="row">
@@ -53,29 +53,28 @@
                 </div>
                 <div class="row">
                   <div class="col-sm-4 text-left"> Link to add: </div>
-                  <div class="col-sm-8 text-left"><b> {{ ad.job_link }} </b></div>
+                  <div class="col-sm-8 text-left"><a href="{{ ad.job_link }}" target="_blank"><b> Link </b></a></div>
                 </div>
                 <div class="row">
                   <div class="col-sm-4 text-left"> Job posted: </div>
                   <div class="col-sm-8 text-left"><b> {{ ad.job_posted }} </b></div>
                 </div>
                 <div class="row">
-                  <div class="col-sm-4 text-left"> Deadline for application: </div>
+                  <div class="col-sm-4 text-left"> Job deadline: </div>
                   <div class="col-sm-8 text-left"><b> {{ ad.job_deadline }} </b></div>
                 </div>
-                <div class="row">
-                  <div class="col-sm-4 text-left"></br>Job description: </div>
-                  <div class="col-sm-8 text-left"><b> {{ ad.job_description }}</b></div>
-                </div>
             </div>
-            <div class="col-xs-6 col-sm-4 ">
+            <div class="col-xs-4 col-sm-4 ">
               <img class="img" src="{{ ad.company_logo }}" ></img>
             </div>
           </div>
-
+          <div class="text-center">
+            <h3>Job description</h3>
+            <div>{{ ad.job_description }}</div>
+          </div>
           <div class="text-center">
             <h3>Required competences</h3>
-            <div>Please enter the level of your skills on these required competences</div>
+            <div>Please enter the level of your skills on these required competences:</div>
             <div ng-repeat="competence in ad.job_competences ">
               </br>
               <div>
