Minor changes before screencast demonstration

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -4,7 +4,7 @@
         <a class="logo" href="index.html">GoodJob</a> 
         <h2>GoodJob - The future of employment branding</h2>
         <p class="description">
-          You have the design, you have the code. We ve created the product that will help your startup to look even better.
+          The simpliest and fastest way to find a job that matches you!
         </p>
         <p><a href="#list" class="dl-btn btn-fill btn-stretch">Search Job Applications</a></p>            
         <p class="dl-btn-group">
