--- a/app/apply/apply.html
+++ b/app/apply/apply.html
@@ -18,76 +18,77 @@
           </b></h2>
         </div>
         <div class="panel-body">
+          <!-- Company logo -->
+          <div class="text-center">
+            <img class="img" src="{{ ad.company_logo }}" ></img>
+          </div>
+          <!-- Job information -->
           <h3 class="text-center">
             Job information
           </h3>
           <div class="row">
-            <div class="col-xs-8 col-sm-8 text-left">
+            <div class="col-xs-6 col-sm-6 text-left">
               <div class="row">
-                  <div class="col-sm-4 text-left"> Job title: </div>
-                  <div class="col-sm-8 text-left"><b> {{ ad.job_header }} </b></div>
-                </div>
-                <div class="row">
-                  <div class="col-sm-4 text-left"> Job position: </div>
-                  <div class="col-sm-8 text-left"><b> {{ ad.job_title }} </b></div>
-                </div>
-                <div class="row">
-                  <div class="col-sm-4 text-left"> Job city: </div>
-                  <div class="col-sm-8 text-left"><b> {{ ad.job_city }} </b></div>
-                </div>
-                <div class="row">
-                  <div class="col-sm-4 text-left"> Job address: </div>
-                  <div class="col-sm-8 text-left"><b> {{ ad.job_address }} </b></div>
-                </div>
-                <div class="row">
-                  <div class="col-sm-4 text-left"> Positions: </div>
-                  <div class="col-sm-8 text-left"><b> {{ ad.job_positions }} </b></div>
-                </div>
-                <div class="row">
-                  <div class="col-sm-4 text-left"> Job conditions: </div>
-                  <div class="col-sm-8 text-left"><b> {{ ad.job_conditions }} </b></div>
-                </div>
-                <div class="row">
-                  <div class="col-sm-4 text-left"> Job hours: </div>
-                  <div class="col-sm-8 text-left"><b> {{ ad.job_hours }} </b></div>
-                </div>
-                <div class="row">
-                  <div class="col-sm-4 text-left"> Link to add: </div>
-                  <div class="col-sm-8 text-left"><a href="{{ ad.job_link }}" target="_blank"><b> Link </b></a></div>
-                </div>
-                <div class="row">
-                  <div class="col-sm-4 text-left"> Job posted: </div>
-                  <div class="col-sm-8 text-left"><b> {{ ad.job_posted }} </b></div>
-                </div>
-                <div class="row">
-                  <div class="col-sm-4 text-left"> Job deadline: </div>
-                  <div class="col-sm-8 text-left"><b> {{ ad.job_deadline }} </b></div>
-                </div>
+                <div class="col-sm-4 text-left"> Job title: </div>
+                <div class="col-sm-8 text-left"><b> {{ ad.job_header }} </b></div>
+              </div>
+              <div class="row">
+                <div class="col-sm-4 text-left"> Job position: </div>
+                <div class="col-sm-8 text-left"><b> {{ ad.job_title }} </b></div>
+              </div>
+              <div class="row">
+                <div class="col-sm-4 text-left"> Job city: </div>
+                <div class="col-sm-8 text-left"><b> {{ ad.job_city }} </b></div>
+              </div>
+              <div class="row">
+                <div class="col-sm-4 text-left"> Job address: </div>
+                <div class="col-sm-8 text-left"><b> {{ ad.job_address }} </b></div>
+              </div>
             </div>
-            <div class="col-xs-4 col-sm-4 ">
-              <img class="img" src="{{ ad.company_logo }}" ></img>
+            <div class="col-xs-6 col-sm-6 text-left">
+              <div class="row">
+                <div class="col-sm-4 text-left"> Job conditions: </div>
+                <div class="col-sm-8 text-left"><b> {{ ad.job_conditions }} </b></div>
+              </div>
+              <div class="row">
+                <div class="col-sm-4 text-left"> Job hours: </div>
+                <div class="col-sm-8 text-left"><b> {{ ad.job_hours }} </b></div>
+              </div>
+              <div class="row">
+                <div class="col-sm-4 text-left"> Link to add: </div>
+                <div class="col-sm-8 text-left"><a href="{{ ad.job_link }}" target="_blank"><b> Link </b></a></div>
+              </div>
+              <div class="row">
+                <div class="col-sm-4 text-left"> Job posted: </div>
+                <div class="col-sm-8 text-left"><b> {{ ad.job_posted }} </b></div>
+              </div>
+              <div class="row">
+                <div class="col-sm-4 text-left"> Job deadline: </div>
+                <div class="col-sm-8 text-left"><b> {{ ad.job_deadline }} </b></div>
+              </div>
             </div>
           </div>
-          <div class="text-center">
-            <h3>Job description</h3>
-            <div>{{ ad.job_description }}</div>
+          <div>
+            <h3 class="text-center">Job description</h3>
+            <div class="text-left">{{ ad.job_description }}</div>
           </div>
-          <div class="text-center">
-            <h3>Required competences</h3>
-            <div>Please enter the level of your skills on these required competences:</div>
-            <div ng-repeat="competence in ad.job_competences ">
+          <div>
+            <h3 class="text-center">Required competences</h3>
+            <div class="text-left">Please enter the level of your skills on these required competences:
+            </div>
+            <div class="text-center" ng-repeat="competence in ad.job_competences ">
               </br>
               <div>
                 <b> {{ competence }} </b>
                 <div>
                   <div class="btn-group" role="group">
-                    <button ng-repeat="i in ['Very bad','Bad','Average','Good','Very good']" type="button" class="btn btn-default"> {{ i }} </button>
+                    <button ng-repeat="i in ['Very bad','Bad','Good','Very good']" type="button" class="btn btn-default"> {{ i }} </button>
                   </div>
                 </div>
               </div>
             </div>
             </br>
-            <div>
+            <div class="text-center">
               <button class="btn btn-default btn-primary" ng-click="addToActiveApplications(ad.job_id)">Send application</button>
             </div>
           </div>
