--- a/app/applications/applications.html
+++ b/app/applications/applications.html
@@ -5,8 +5,46 @@
 					Active Job Applications
 				</h2>
 			</div>
-
-			<div ng-repeat="ad in ads">
+<div ng-repeat="ad in ads">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h2 class="panel-title company_name"><b>
+				            {{ ad.company_name }} <!-- - {{ ad.company_match }} match -->
+				        </b></h2>
+					</div>
+					<div class="panel-body">
+						<div class="row">
+							<div class="col-xs-8 col-sm-8 text-left">
+								<div class="row">
+									<div class="col-sm-4 text-left"> Job title: </div>
+									<div class="col-sm-8 text-left"><b> {{ ad.job_header }} </b></div>
+								</div>
+								<div class="row">
+									<div class="col-sm-4 text-left"> Job position: </div>
+									<div class="col-sm-8 text-left"><b> {{ ad.job_title }} </b></div>
+								</div>
+								<div class="row">
+									<div class="col-sm-4 text-left"> Job city: </div>
+									<div class="col-sm-8 text-left"><b> {{ ad.job_city }} </b></div>
+								</div>
+								<div class="row">
+									<div class="col-sm-4 text-left"> Job posted: </div>
+									<div class="col-sm-8 text-left"><b> {{ ad.job_posted }} </b></div>
+								</div>
+		 					</div>
+							<div class="col-xs-4 col-sm-4 ">
+								<img class="img" src="{{ ad.company_logo }}" ></img>
+							</div>
+						</div>
+						<div class="row">
+							<div class="text-center">
+								  <button class="btn btn-default btn-primary" ng-click="removeFromActiveApplications(ad.job_id)">Remove application</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- <div ng-repeat="ad in ads">
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<h2 class="panel-title company_name">
@@ -52,11 +90,12 @@
 							<div class="text-center">
 								<button class="btn btn-default btn-primary" ng-if="ad.job_status=='Accepted'" ng-click="continueWithApplication(ad.job_status)">Continue</button>
 							</div>
+							  <div class="text-center">
+              <button class="btn btn-default btn-primary" ng-click="removeFromActiveApplications('ad.job_id')">Remove application</button>
+            </div>-->
 						</div>
 					</div>
 				</div>
 			</div>
-			<div ui-content-for="navbarAction">
-		      <a class='btn' ng-click='logout()'>Logout</a>
-		    </div>
+	
 		</div>
